--- a/.github/workflows/gha-sample.yml
+++ b/.github/workflows/gha-sample.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   numpy-test:
     runs-on: ubuntu-latest
+    timeout-minutes: 100
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
